Made urls easier readble in the base_url select

--- a/src/assets/html/menu.html
+++ b/src/assets/html/menu.html
@@ -1079,20 +1079,12 @@
         <div class="option">
           <span>Proxy URL</span>
           <select id="base_url" data-setting="base_url">
-            <option value="https://kirka.io/">https://kirka.io/</option>
-            <option value="https://cloudyfrogs.com/">
-              https://cloudyfrogs.com/
-            </option>
-            <option value="https://snipers.io/">https://snipers.io/</option>
-            <option value="https://ask101math.com/">
-              https://ask101math.com/
-            </option>
-            <option value="https://fpsiogame.com/">
-              https://fpsiogame.com/
-            </option>
-            <option value="https://cloudconverts.com/">
-              https://cloudconverts.com/
-            </option>
+            <option value="https://kirka.io/">kirka.io</option>
+            <option value="https://cloudyfrogs.com/">cloudyfrogs.com</option>
+            <option value="https://snipers.io/">snipers.io</option>
+            <option value="https://ask101math.com/">ask101math.com</option>
+            <option value="https://fpsiogame.com/">fpsiogame.com</option>
+            <option value="https://cloudconverts.com/">cloudconverts.com</option>
           </select>
         </div>
       </div>
