--- a/src/assets/html/menu.html
+++ b/src/assets/html/menu.html
@@ -871,6 +871,19 @@
       </div>
       <div class="option-group">
         <div class="option">
+          <span>Hide Lobby Keybind Reminder</span>
+          <div class="checkbox">
+            <input
+              type="checkbox"
+              id="hide_keybind_reminder"
+              data-setting="hide_keybind_reminder"
+            />
+            <label for="hide_keybind_reminder"></label>
+          </div>
+        </div>
+      </div>
+      <div class="option-group">
+        <div class="option">
           <span>Badges and Gradient Names</span>
           <div class="checkbox">
             <input
