--- a/src/assets/html/splash.html
+++ b/src/assets/html/splash.html
@@ -1,61 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Juice Client</title>
+    <style>
+      @font-face {
+        font-family: "Kanit";
+        src: url("../Kanit-Regular.ttf") format("truetype");
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Juice Client</title>
-  <style>
-    @font-face {
-      font-family: "Kanit";
-      src: url("../Kanit-Regular.ttf") format("truetype")
-    }
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        width: 600px;
+        height: 300px;
+        color: white;
+        text-shadow: 0 0 0.5rem black;
+        font-family: "Kanit", sans-serif;
+        -webkit-app-region: drag;
+      }
 
-    html,
-    body {
-      margin: 0;
-      padding: 0;
-      width: 600px;
-      height: 300px;
-      color: white;
-      text-shadow: 0 0 0.5rem black;
-      font-family: "Kanit", sans-serif;
-      -webkit-app-region: drag;
-    }
+      .splash {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background: url("../img/juice_banner.webp") no-repeat center center /
+          cover;
+        border-radius: 1.5rem;
+        padding: 0.75rem 1rem;
+        box-sizing: border-box;
+        position: relative;
+      }
 
-    .splash {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background: url("../img/juice_banner.webp") no-repeat center center / cover;
-      border-radius: 1.5rem;
-      padding: 0.75rem 1rem;
-      box-sizing: border-box;
-      position: relative;
-    }
+      .border {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0.25rem solid rgb(255, 255, 255, 0.25);
+        border-radius: 1.5rem;
+        box-sizing: border-box;
+      }
+    </style>
+  </head>
 
-    .border {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: 0.25rem solid rgb(255, 255, 255, 0.25);
-      border-radius: 1.5rem;
-      box-sizing: border-box;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="splash">
-    <div class="status"></div>
-    <div class="ver"></div>
-  </div>
-  <div class="border"></div>
-</body>
-
+  <body>
+    <div class="splash">
+      <div class="status"></div>
+      <div class="ver"></div>
+    </div>
+    <div class="border"></div>
+  </body>
 </html>
